<?xml version="1.0"?>
<package format="3">
  <name>bayesian_belief_networks</name>
  <version>2.1.31</version>
  <description>The bayesian_belief_networks package form https://github.com/eBay/bayesian-belief-networks, Authored by Neville Newey, Anzar Afaq, Copyright 2013 eBay Software Foundation</description>

  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>


  <license>Apache License, Version 2.0</license>


  <url type="website">https://github.com/eBay/bayesian-belief-networks</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>mk</build_depend>
  <build_depend>unzip</build_depend>
  <build_depend>git</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend condition="$ROS_PYTHON_VERSION == 2">python-packaging</build_depend>
  <build_depend condition="$ROS_PYTHON_VERSION == 3">python3-packaging</build_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>

</package>
