<?xml version="1.0"?>
<package>
  <name>bayesian_network</name>
  <version>0.0.0</version>
  <description>The bayesian_network package</description>

  <maintainer email="furushchev@jsk.imi.i.u-tokyo.ac.jp">Yuki Furuta</maintainer>
  <license>GPLv2</license>
  <author email="furushchev@jsk.imi.i.u-tokyo.ac.jp">Yuki Furuta</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>r-base</run_depend>
  <run_depend>pyper-pip</run_depend>
  <run_depend>python-pandas</run_depend>
  <export>
  </export>
</package>
