<?xml version="1.0"?>
<package format="3">
  <name>bl_force_torque_sensor_ros</name>
  <version>2.1.14</version>
  <description>ROS driver package for BL force torque sensor</description>

  <maintainer email="pazeshun3682@gmail.com">Shun Hasegawa</maintainer>
  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <author email="pazeshun3682@gmail.com">Shun Hasegawa</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rosserial_arduino</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
  </export>
</package>
