<?xml version="1.0"?>
<package format="3">
  <name>dialogflow_intent_client</name>
  <version>2.1.24</version>
  <description>The dialogflow_intent_client package</description>

  <maintainer email="obinata@jsk.imi.i.u-tokyo.ac.jp">Yoshiki Obinata</maintainer>

  <license>BSD</license>

  <author email="obinata@jsk.imi.i.u-tokyo.ac.jp">Yoshiki Obinata</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>catkin_virtualenv</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roslaunch</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <pip_requirements>requirements.txt</pip_requirements>
  </export>
</package>
