<?xml version="1.0"?>
<package format="1">
  <name>dialogflow_task_executive</name>
  <version>2.1.14</version>
  <description>A ROS package for Task execution with dialogflow</description>

  <maintainer email="shingogo.5511@gmail.com">Shingo Kitagawa</maintainer>

  <license>BSD</license>
  <author email="furushchev@jsk.imi.i.u-tokyo.ac.jp">Yuki Furuta</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>app_manager</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>python-dialogflow-pip</run_depend>
  
  <export>
  </export>

</package>
