<?xml version="1.0" encoding="utf-8"?>
<package format="1">
  <name>dialogflow_task_executive</name>
  <version>2.1.31</version>
  <description>A ROS package for Google Dialogflow and launching apps via Dialogflow</description>

  <maintainer email="shingogo.5511@gmail.com">Shingo Kitagawa</maintainer>
  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>

  <license>BSD</license>
  <author email="obinata@jsk.imi.i.u-tokyo.ac.jp">Yoshiki Obinata</author>
  <author email="shingogo.5511@gmail.com">Shingo Kitagawa</author>
  <author email="furushchev@jsk.imi.i.u-tokyo.ac.jp">Yuki Furuta</author>
  <url type="website">http://ros.org/wiki/dialogflow_task_executive</url>
  <url type="repository">https://github.com/jsk-ros-pkg/jsk_3rdparty</url>
  <url type="bugtracker">https://github.com/jsk-ros-pkg/jsk_3rdparty/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>catkin_virtualenv</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>app_manager</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>speech_recognition_msgs</run_depend>
  <run_depend>topic_tools</run_depend>
  <!-- <run_depend>python-dialogflow-pip</run_depend> install via catkin_virtualenv -->
  <test_depend>rostest</test_depend>

  <export>
    <pip_requirements>requirements.txt</pip_requirements>
    <app_manager app_dir="${prefix}/apps"/>
  </export>

</package>
