<?xml version="1.0"?>
<package format="3">
  <name>dialogflow_webhook_ros</name>
  <version>2.1.25</version>
  <description>A ROS package for getting dialogflow webhook response</description>

  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>

  <license>BSD</license>
  <author email="obinata@jsk.imi.i.u-tokyo.ac.jp">Yoshiki Obinata</author>
  <url type="repository">https://github.com/jsk-ros-pkg/jsk_3rdparty</url>
  <url type="bugtracker">https://github.com/jsk-ros-pkg/jsk_3rdparty/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>dialogflow_task_executive</exec_depend>

  <export>
  </export>

</package>
