<?xml version="1.0"?>
<package format="2">
  <name>gdrive_recorder</name>
  <version>2.1.24</version>
  <description>The ROS package for long-term audio-visual recording</description>

  <maintainer email="shingogo.5511@gmail.com">Shingo Kitagawa</maintainer>
  <author email="shingogo.5511@gmail.com">Shingo Kitagawa</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>audio_video_recorder</exec_depend>
  <exec_depend>gdrive_ros</exec_depend>
  <exec_depend>python-tz</exec_depend>

  <export>
  </export>
</package>
